--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-<IfModule mod_rewrite.c>
-	RewriteEngine On
-	RewriteCond %{SERVER_PORT} 80
-	RewriteRule ^(.*)$ https://demo.softwarebss.com/b4u/$1 [R,L]
-</IfModule>
+RewriteEngine on
+RewriteCond $1 !^(index\.php|public|\.txt)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?$1
